--- a/style.css
+++ b/style.css
@@ -64,6 +64,8 @@
 .henry-modal {
   display: none;
   position: fixed;
+  right: 0px;
+  top: 10px;
   z-index: 9999;
   left: 0; top: 0;
   width: 100%; height: 100%;
